# BTU-Calculator

./: BTUCalculator.cpp  BTUCalculator.h  CMakeLists.txt  Images.qrc  btucalculator.cpp  btucalculator.h  btucalculator.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
